# oop_mmf

./: README.md
Task0/: CMakeLists.txt  Frequency_counter.cpp  Frequency_counter.h  Words_reader.cpp  Words_reader.h  input.txt  word_count.cpp
Task1/: CMakeLists.txt  Field.cpp  Field.h  GameLife.cpp  GameLife.h  GraphicViewer.cpp  GraphicViewer.h  main.cpp
Task3/: Array.cpp  Array.h  CMakeLists.txt  Functions.h  main.cpp
Task3/test/: unit_tests.cpp
Task4/: BitWriter.cpp  BitWriter.h  CMakeLists.txt  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  Haffman_algorithm.cpp  Haffman_algorithm.h  TreeforBytes.cpp  TreeforBytes.h  main.cpp
Task4/test/: md5.h  tests.cpp
Task5/: CMakeLists.txt  CSVParser.h  InputIterator.cpp  InputIterator.h  TupleLibrary.h  main.cpp  test.csv
Task5/test/: tests.cpp
Task6/: Task6.pro  functionmaker.cpp  functionmaker.h  main.cpp  mainwindow.cpp  mainwindow.h
Task6/Test/Test/: Test.pro  main.cpp
Task6/Test/Test — копия/: Test.pro  main.cpp
Task6/Test/build-Test-Desktop_Qt_5_12_3_MinGW_64_bit-Debug/: Makefile.Debug  Makefile.Release
Task6/Unit_tests/: Unit_tests.pro  main.cpp
Task6/build-Unit_tests-Desktop_Qt_5_12_3_MSVC2017_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
Task7/: Task7.pro  gas_dynamics.cpp  gas_dynamics.h  initial_parameters.h  linear_algebra.cpp  linear_algebra.h  main.cpp  mainwindow.cpp  mainwindow.h
Task7/Test/: Test.pro  main.cpp
Task7/build-Test-Desktop_Qt_5_12_3_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
Task7/build-Test-Desktop_Qt_5_12_3_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp  qmake_qmake_immediate.qrc  qrc_qmake_qmake_immediate.cpp
